Maybe Fix to Spacing?

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ nav{
 .headshot{
   height: 100px;
   padding: 25px 20px;
+  display: inline-block;
 }
 .icon-bar{
   background: darkorange;
